Crash in mozilla::dom::quota::(anonymous namespace)::OriginParser::HandleToken when opening Storage Inspector on a IPv6 URL
Categories
(Core :: Storage: Quota Manager, defect, P3)
Tracking
()
People
(Reporter: mail, Assigned: tt)
References
(Blocks 1 open bug)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:64.0) Gecko/20100101 Firefox/64.0
Steps to reproduce:
- go to a IPv6 URL (e.g. https://[2606:4700:4700::1111]/)
- open "Storage" Tab in Web Inspector
Actual results:
Firefox Crashed: https://crash-stats.mozilla.com/report/index/51b47cc8-056b-4f2c-bed0-0dfb80190114
Expected results:
Cookies etc should be listed
Updated•7 years ago
|
| Assignee | ||
Comment 1•7 years ago
|
||
I guess it's because OriginParser doesn't support this kind of URL. Since it's part of the initialization failure, I am going to take and fix it.
| Assignee | ||
Comment 2•7 years ago
|
||
although it's a crash, but the number is low. I would probably work on this after fixing other crashes and issues.
| Assignee | ||
Comment 3•7 years ago
|
||
Andrew and Jan told me that I should be careful of transferring issues while parsing into the disk. If we have this trouble, it is possible to have two different origins but having the same directory.
| Assignee | ||
Comment 4•7 years ago
|
||
(In reply to Tom Tung [:tt, :ttung] from comment #3)
Andrew and Jan told me that I should be careful of transferring issues while parsing into the disk. If we have this trouble, it is possible to have two different origins but having the same directory.
Also, if someone has already had a directory from this origin, I should handle that properly.
| Assignee | ||
Comment 5•7 years ago
|
||
The supporting format for IPv6 URL based on https://www.ietf.org/rfc/rfc2732.txt
| Assignee | ||
Comment 6•7 years ago
|
||
Comment 8•7 years ago
|
||
| bugherder | ||
Comment 9•7 years ago
|
||
AFAICT, we're not hitting this in the wild, so we can let the fix ride the trains. Feel free to nominate for Beta uplift if you feel strongly otherwise, however.
Description
•