Bug 1519822 - Support IPv6 URL on OriginParser; r=asuth

The supporting format for IPv6 URL based on
https://url.spec.whatwg.org/#host-representation

Differential Revision: https://phabricator.services.mozilla.com/D18213

--HG--
extra : moz-landing-system : lando